# Lab1

Sem2Lab1/: CMakeLists.txt  Graph.cpp  main.cpp
Sem2Lab1/AutoTest/: AutoTest.h  AutoTestRun.h
Sem2Lab1/IO/: IO.cpp  IO.h
Sem2Lab1/ManualTest/: ManualTester.cpp  ManualTester.h
Sem2Lab1/Sorter/: BubbleSorter.h  Helper.h  ISorter.h  InsertionSorter.h  SelectionSorter.h  ShakerSorter.h
Sem2Lab1/UI/: UI.cpp  UI.h
